# agent

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile.companion_agent  Dockerfile.evals  Dockerfile.evals.dhp  Dockerfile.local  PolicyDefinitions.yaml  README.md  Tiltfile  _RepoMetadata.yaml  __init__.py  agent_base.py  base_rest_handler.py  conftest.py  constants.py  dhp-gen-self-signed-cert.sh  docker-compose-evals.yaml  docker-compose-langfuse-v2.yaml  docker-compose.yaml  env_sample.local  exceptions.py  group_idp_client.py  init.sh  metrics.py  mkdocs.yml  patchwerk.yaml  pyproject.toml  rag_knowledgebase_client.py  redis_connection_manager.py  redis_service.py  requirements.txt  session.py  sonar-project.properties  stickiness_cookie_manager.py  sync_prompts.py  timer_manager.py  widget_html_renderer.py
a2a/: __init__.py
a2a/agent_cards/: homebuying-agent.json  products-agent.json  savings-agent.json
a2a/agent_cards/schema/: agent-card.schema.json
a2a/client/: __init__.py  a2a_client.py
a2a/config/: __init__.py  a2a_agent_config.py  a2a_agents.yaml  validation.py
a2a/registry/: __init__.py  card_definition.py  local_registry.py
a2a/server/: __init__.py  a2a_server.py  base_executor.py  server_manager.py
all_agents/: __init__.py
api-spec/financial_companion_agent_service/: financial-companion-api.yaml  metadata.yaml  redocly.yaml
api_services/: README.md  __init__.py  customer_profile_service.py  location_data_service.py
certs/: ca-bundle.crt
configs/: agent_config_base.py  agent_config_settings.py  app_config_settings.py
dashboards/: grafana_dashboard.json
database/: __init__.py  models.py  sqlalchemy_setup.py
docker/common/: networks.yaml  volumes.yaml
docker/infrastructure/: liquibase.yaml  pgadmin.yaml  postgres.yaml  redis.yaml
docker/services/: agent.evals.yaml  agent.local.yaml  gradio.yaml
docker/services/langfuse/: db.yaml  server.yaml
genai/marketplace/agent/: financial_companion_principal_agent.yaml
logging/: __init__.py  core.py  lambda_logging.py  middleware.py
mock_services/: __init__.py  account_mock_service.py  accounts_edge_mock_service.py  billhub_mock_service.py  cashflow_mock_service.py  enriched_transactions_mock_service.py  savings_goals_mock_service.py  spendlimits_mock_service.py
mock_services/util/: __init__.py  api_invoker.py  config.py  config_loader.py  io_recorder.py  mock_service_config_product_agent.yaml  mock_service_config_savings_agent.yaml  mock_utils.py  parameter_generator.py  result_writer.py  service_agent_mapping.yaml
models/: __init__.py  basic.py  conversation_manager_types.py  domain_descriptions.py  feature_flags.py  litellm_model.py  non_conversation_manager_types.py  sub_agent_output.py  sub_agent_request.py
prompts/: __init__.py  automated_reasoning_evaluation_prompt.md  automated_reasoning_extraction_guardrail_prompt.md  automated_reasoning_extraction_system_prompt.md  automated_reasoning_fact_extraction_prompt.md  instructions_intent.md  intent_decomposition_instructions.md  principal_instructions.md  process_adherence_guardrail_prompt.md  process_adherence_system_prompt.md
scripts/: basic_langfuse_convo_extraction.py  format_and_check.py  generate_changelog.py  generate_monorepo_release_notes.py  profile_secure_sqlite_executor.py  run_api_integration_tests.py  test_financial_companion_api_integration.py  update_eval_results.py  update_main_eval_page.py
scripts/dm_extract/: README.md  combine_csvs.py  dm_extract.py
services/: __init__.py  elastic_search_service.py  launchdarkly_service.py  llm_reranker_service.py  service_api_base.py
tools/: __init__.py  accounts_edge_tools.py  calculator.py  client_services_tools.py  conversation_tools.py  customer_personas.py  enhanced_agent_hooks.py  guardrail_tools.py  historical_search_tools.py  memory_management_tools.py  product_categories.py  progress_store.py  rag_tools.py  scratchpad_tool.py  sso_deeplink_tools.py  sub_agent_tools.py  tool_context.py  util_langfuse.py
tools/automated_reasoning/: expression_nodes.py  guardrail_openai_base.py  policy_evaluator.py  rule_parser.py
tools/process_adherence/: guardrail_openai_base.py
utils/: __init__.py  auth_utils.py  date_utils.py  litellm_utils.py  personalisation_utils.py  runtime_utils.py  security_redactor.py  string_utils.py
